Fixed error in Test file